--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DevUI CSS Library - Comprehensive Component Documentation</title>
   <link rel="stylesheet" href="devui-library.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4093862221318795" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     .demo-section {
@@ -2512,4 +2513,5 @@
   </script>
 </body>
 </html>
+
 
