--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DevUI CSS Library - Comprehensive Component Documentation</title>
+  <title>UiZone CSS Library - Comprehensive Component Documentation</title>
   <link rel="stylesheet" href="devui-library.css">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4093862221318795" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -155,7 +155,7 @@
 <body class="devui-library">
   <!-- Sidebar Navigation -->
   <nav class="sidebar-nav">
-    <div class="navbar-brand">DevUI CSS</div>
+    <div class="navbar-brand">UiZone CSS</div>
     <a href="#getting-started" class="active">Getting Started</a>
     <a href="#examples">HTML Examples</a>
     <a href="#buttons">Buttons</a>
@@ -207,10 +207,10 @@
   <main class="main-content">
     <!-- Hero Section -->
     <section class="hero-section">
-      <h1 class="hero-title">DevUI CSS Library</h1>
+      <h1 class="hero-title">UiZone CSS Library</h1>
       <p class="hero-subtitle">A comprehensive, developer-friendly CSS component library for modern web applications</p>
       <div class="installation-code">
-        <span class="code-tag">&lt;link</span> <span class="code-attr">rel</span>=<span class="code-string">"stylesheet"</span> <span class="code-attr">href</span>=<span class="code-string">"https://cdn.jsdelivr.net/gh/anvithshetty17/devui-css-library/devui-library.css"</span><span class="code-tag">&gt;</span>
+        <span class="code-tag">&lt;link</span> <span class="code-attr">rel</span>=<span class="code-string">"stylesheet"</span> <span class="code-attr">href</span>=<span class="code-string">"https://cdn.jsdelivr.net/gh/goperdoor/uidev/blob/main/public/devui-library.css"</span><span class="code-tag">&gt;</span>
       </div>
       <div style="margin-top: 2rem;">
         <a href="#getting-started" class="btn btn-lg" style="background: white; color: var(--primary-color);">Get Started</a>
@@ -2477,7 +2477,7 @@
 
     <!-- Footer -->
     <footer style="margin-top: 4rem; text-align: center; padding: 2rem; background: var(--gray-900); color: var(--white); border-radius: var(--border-radius-lg);">
-      <h3>DevUI CSS Library</h3>
+      <h3>UiZone CSS Library</h3>
       <p>Built with ❤️ by Anvith Shetty</p>
       <div style="margin-top: 1rem;">
         <a href="https://github.com/anvithshetty17/devui-css-library" class="btn btn-outline" style="border-color: white; color: white;">GitHub</a>
@@ -2513,5 +2513,6 @@
   </script>
 </body>
 </html>
+
 
 
