--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,7 @@
       <h1 class="hero-title">UiZone CSS Library</h1>
       <p class="hero-subtitle">A comprehensive, developer-friendly CSS component library for modern web applications</p>
       <div class="installation-code">
-        <span class="code-tag">&lt;link</span> <span class="code-attr">rel</span>=<span class="code-string">"stylesheet"</span> <span class="code-attr">href</span>=<span class="code-string">"https://cdn.jsdelivr.net/gh/goperdoor/uidev/blob/main/public/devui-library.css"</span><span class="code-tag">&gt;</span>
+        <span class="code-tag">&lt;link</span> <span class="code-attr">rel</span>=<span class="code-string">"stylesheet"</span> <span class="code-attr">href</span>=<span class="code-string">"https://cdn.jsdelivr.net/gh/goperdoor/uidev@main/public/devui-library.css"</span><span class="code-tag">&gt;</span>
       </div>
       <div style="margin-top: 2rem;">
         <a href="#getting-started" class="btn btn-lg" style="background: white; color: var(--primary-color);">Get Started</a>
@@ -2513,6 +2513,7 @@
   </script>
 </body>
 </html>
+
 
 
 
